--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,13 @@ output: html_document
 
 # **My Lab Journal**
 
-This is a template example for lab journaling. Students in Matt Crump's Human Cognition and Performance Lab will use this template to learn R, and other things. Students can replace this text with more fun things. People not in my lab can use this too.
+I'm a writer who loves data - on markets, business, sports and love.
+
+I find data, scrape it, clean it, build datasets, turn data into visuals, and tell stories around it. From 270-character tweets to 8,000-word white papers. 
+
+You're probably sitting on a lot of data now that you're not using. Data that could help tell your story, awe your customers, and bring your unique perspective to a global audience.
+
+How can I help you explain yourself to the world?
 
 ## How to use
 
