--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ output: html_document
 <div class="row" style="padding-top: 30px;">
 <div class="col-sm-6">
 
-# **My Lab Journal**
+# **Data Journalist**
 
 I'm a writer who loves data - on markets, business, sports and love.
 
