--- a/index.Rmd
+++ b/index.Rmd
@@ -43,10 +43,10 @@ How can I help you explain yourself to the world?
 
 </div>
 <div class="col-sm-6">
-
+<!--\1   
 ### [Crump Lab: Human Cognition and Performance](https://crumplab.github.io)
 
-<a href = "https://crumplab.github.io">
+<a href = "https://crumplab.github.io"> \1-->
 ![](images/home1.png)
 </a>
 </div>
