--- a/DS2.Rmd
+++ b/DS2.Rmd
@@ -37,6 +37,9 @@ The project yielded lots of insights about clusters of common interests among re
 </div>
 <div class="col-sm-6">
 
+
+<a href = "[https://vimeo.com/693768664/3a622a67f4](https://analyzethis.net/portfolio)">
 ![](images/page2.png)
 
+</a>
 </div>
